# CppWindows

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/cw/st/: Area.cpp  Area.h
src/cw/ut/: AreaTreeUtils.h  Point.h  Size.h
src/testing/: Testing.h
